--- a/modules/insights/client/views/publish-lightbox-insight.client.view.html
+++ b/modules/insights/client/views/publish-lightbox-insight.client.view.html
@@ -35,7 +35,7 @@
              </section>
         </section>
 
-            <div class="popup-social-share"> 
+            <div class="popup-social-share">
                 <div>
                     <div class="col-xs-3 social-box" ng-show="isConnectedSocialAccount('linkedin')">
                         <input type="checkbox" class="popup-social-checkbox" ng-model="sn.linkedin">
@@ -60,9 +60,16 @@
                 </div>
             </div>
             <br /><br />
-            <div class="form-group text-right">
-              <button type="button" class="btn btn-default no-border-radius site-button-width" ng-click="cancel()">Cancel</button>
-              <button type="button" class="btn btn-primary no-border-radius site-button-width" ng-click="publish(insight)">Publish</button>
+            <div class="form-group">
+              <div class="text-left">
+                {{fbShareMsg}}<br />
+                {{twShareMsg}}<br />
+                {{liShareMsg}}
+              </div>
+              <div class="text-right">
+                <button type="button" class="btn btn-default no-border-radius site-button-width" ng-click="cancel()">Cancel</button>
+                <button type="button" class="btn btn-primary no-border-radius site-button-width" ng-click="publish(insight)">Publish</button>
+              </div>
             </div>
     </form>
 </div>
